--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -40,6 +40,10 @@ $color-pink-pastel: #ffeaf3;
     right: 120px;
 }
 
+#soundCloudPlayer {
+    display: none;
+}
+
 .up__page {
     bottom: 50px;
     right: 50px;
